[gd_scene load_steps=20 format=3 uid="uid://bkmfkprymsvlc"]

[ext_resource type="Script" path="res://scripts/intro_cutscene.gd" id="1_qxis0"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="2_k6xdm"]
[ext_resource type="Texture2D" uid="uid://xuv6aldsubr7" path="res://assets/Video/Spritesheets/Intro_Picture1.png" id="2_v47mh"]
[ext_resource type="Texture2D" uid="uid://cfokjvxmntdqy" path="res://assets/Video/Spritesheets/Intro_Picture2.png" id="3_hnmh8"]
[ext_resource type="Texture2D" uid="uid://31b73bsc6yhp" path="res://assets/Video/Spritesheets/Intro_Picture3.png" id="4_qogjk"]
[ext_resource type="Texture2D" uid="uid://cbx62u0bdx8e4" path="res://assets/Video/Spritesheets/Intro_Picture4.png" id="5_sx1q6"]
[ext_resource type="Texture2D" uid="uid://bxs04a102osb1" path="res://assets/Video/Spritesheets/Intro_Picture5.png" id="6_dbqxs"]
[ext_resource type="Texture2D" uid="uid://denxnankh4nb8" path="res://assets/Video/Spritesheets/Intro_Picture6.png" id="7_1trb2"]
[ext_resource type="Texture2D" uid="uid://bg6kq7pyr0srs" path="res://assets/Video/Spritesheets/Intro_Picture7.png" id="8_khr5m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_058s6"]
shader = ExtResource("2_k6xdm")
shader_parameter/player_position = Vector2(0.5, 0.5)
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/MULTIPLIER = 0.56
shader_parameter/SCALE = 0.355
shader_parameter/SOFTNESS = 3.655

[sub_resource type="Animation" id="Animation_8gw46"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7stry"]
resource_name = "page_1"
length = 3.00001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 11, 12, 13, 14, 11, 12, 13, 14, 11, 12, 13, 14, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_yr8xr"]
resource_name = "page_2"
length = 3.00001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 11, 12, 13, 14, 11, 12, 13, 14, 11, 12, 13, 14, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_tuw6p"]
resource_name = "page_3"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_2crio"]
resource_name = "page_4"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_yfrtg"]
resource_name = "page_5"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_vtpt1"]
resource_name = "page_6"
length = 4.00001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 2]
}

[sub_resource type="Animation" id="Animation_jk1b5"]
resource_name = "page_7"
length = 2.90001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vqcar"]
_data = {
"RESET": SubResource("Animation_8gw46"),
"page_1": SubResource("Animation_7stry"),
"page_2": SubResource("Animation_yr8xr"),
"page_3": SubResource("Animation_tuw6p"),
"page_4": SubResource("Animation_2crio"),
"page_5": SubResource("Animation_yfrtg"),
"page_6": SubResource("Animation_vtpt1"),
"page_7": SubResource("Animation_jk1b5")
}

[node name="intro_cutscene" type="Node2D"]
script = ExtResource("1_qxis0")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
z_index = 12
material = SubResource("ShaderMaterial_058s6")
offset_left = -231.0
offset_top = -130.0
offset_right = 231.0
offset_bottom = 130.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 21.0
one_shot = true

[node name="Page1" type="Sprite2D" parent="."]
position = Vector2(-3, -49)
rotation = 0.0358935
texture = ExtResource("2_v47mh")
hframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="Page1"]
libraries = {
"": SubResource("AnimationLibrary_vqcar")
}

[node name="Page2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-44, -27)
rotation = -0.0593412
texture = ExtResource("3_hnmh8")
hframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="Page2"]
libraries = {
"": SubResource("AnimationLibrary_vqcar")
}

[node name="Page3" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(79.9184, -16.8161)
rotation = 0.0610865
texture = ExtResource("4_qogjk")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Page3"]
libraries = {
"": SubResource("AnimationLibrary_vqcar")
}

[node name="Page4" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-75, 4)
rotation = -0.0474946
texture = ExtResource("5_sx1q6")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Page4"]
libraries = {
"": SubResource("AnimationLibrary_vqcar")
}

[node name="Page5" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(75.9183, 26.1839)
rotation = 0.0619927
texture = ExtResource("6_dbqxs")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Page5"]
libraries = {
"": SubResource("AnimationLibrary_vqcar")
}

[node name="Page6" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-69, 33)
rotation = -0.0388771
texture = ExtResource("7_1trb2")
hframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="Page6"]
libraries = {
"": SubResource("AnimationLibrary_vqcar")
}

[node name="Page7" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-2, -9)
texture = ExtResource("8_khr5m")
hframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="Page7"]
libraries = {
"": SubResource("AnimationLibrary_vqcar")
}
